--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "react": "18.2.0",
     "react-native": "0.72.4",
     "react-native-gesture-handler": "~2.12.0",
+    "react-native-input-spinner": "^1.8.1",
     "react-native-pager-view": "6.2.0",
     "react-native-paper": "^5.10.4",
     "react-native-safe-area-context": "^4.6.3",
